--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -43,20 +43,20 @@
 
 .a-sub {
   margin: 20px 0px;
-  width: 80%;
+  width: 90%;
 }
 
 .a-desc {
-  font-weight: 400;
-  width: 80%;
+  margin: 20px 0px;
+  width: 90%;
 }
 
 .a-educ {
   margin-top: 50px;
   display: flex;
   align-items: center;
+  width: 95%;
   justify-content: space-between;
-  width: 80%;
 }
 
 .a-educ-img {
@@ -69,4 +69,29 @@
   font-weight: bold;
   color: #555;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 480px) {
+  .a {
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .a-left {
+    width: 100%;
+  }
+
+  .a-card {
+    height: 30vh;
+  }
+
+  .a-card.bg,
+  .a-award {
+    display: none;
+  }
+
+  .a-right {
+    padding: 20px;
+  }
 }
