--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -51,7 +51,7 @@
   height: 50px;
   font-size: 30px;
   font-weight: bold;
-  color: #59b256;
+  color: #497e7d;
   display: flex;
   align-items: center;
 }
@@ -69,4 +69,22 @@
   height: 30px;
   position: absolute;
   bottom: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  .i {
+    flex-direction: column;
+  }
+
+  .i-left-wrapper {
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+  }
+
+  .i-desc {
+    display: none;
+  }
 }
